Fix home page button to redirect to /post instead of /pricing

--- a/index.html
+++ b/index.html
@@ -1,240 +1,243 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Rental Properties in Hisar | Flats, Houses & Shops – ARH Rentals</title>
-  <meta name="description" content="Browse flats, houses and shops for rent in Hisar. ARH Rentals is a local property listing platform where owners post rental ads directly. Users should verify details independently." />
+  <meta name="description"
+    content="Browse flats, houses and shops for rent in Hisar. ARH Rentals is a local property listing platform where owners post rental ads directly. Users should verify details independently." />
 
-<!-- Open Graph / Social Sharing -->
-<meta property="og:type" content="website" />
-<meta property="og:title" content="Rental Properties in Hisar | Flats, Houses & Shops – ARH Rentals" />
-<meta property="og:description" content="Find flats, houses and commercial shops for rent in Hisar. ARH Rentals is a rental listing platform where property owners publish ads directly." />
-<meta property="og:url" content="https://rent.anjanirealheights.com/" />
-<meta property="og:image" content="https://rent.anjanirealheights.com/assets/arh-logo.png" />
+  <!-- Open Graph / Social Sharing -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Rental Properties in Hisar | Flats, Houses & Shops – ARH Rentals" />
+  <meta property="og:description"
+    content="Find flats, houses and commercial shops for rent in Hisar. ARH Rentals is a rental listing platform where property owners publish ads directly." />
+  <meta property="og:url" content="https://rent.anjanirealheights.com/" />
+  <meta property="og:image" content="https://rent.anjanirealheights.com/assets/arh-logo.png" />
 
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Rental Properties in Hisar – ARH Rentals" />
-<meta name="twitter:description" content="Browse rental listings in Hisar. Owners post property ads directly on ARH Rentals. Verify details independently." />
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Rental Properties in Hisar – ARH Rentals" />
+  <meta name="twitter:description"
+    content="Browse rental listings in Hisar. Owners post property ads directly on ARH Rentals. Verify details independently." />
 
-  <link rel="stylesheet" href="/assets/styles.css"/>
+  <link rel="stylesheet" href="/assets/styles.css" />
   <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdYFTssAAAAAGqObwYCNTt7WFoLWkdJhomR6geu"></script>
 </head>
+
 <body class="home">
 
-<header class="site-header">
-  <div class="container">
-    <div class="navbar">
+  <header class="site-header">
+    <div class="container">
+      <div class="navbar">
 
-      <a class="brand" href="/">
-        <img class="brand-logo" src="/assets/arh-logo.png" alt="ARH Rentals Logo">
-        <div class="brand-title">
-          <strong>ARH Rentals</strong>
-          <span>by Anjani Real Heights</span>
-        </div>
-      </a>
+        <a class="brand" href="/">
+          <img class="brand-logo" src="/assets/arh-logo.png" alt="ARH Rentals Logo">
+          <div class="brand-title">
+            <strong>ARH Rentals</strong>
+            <span>by Anjani Real Heights</span>
+          </div>
+        </a>
 
-      <div class="header-actions">
-         <div class="account-menu" data-account-menu hidden>
-          <button class="account-trigger" type="button" aria-expanded="false" aria-controls="account-dropdown">
-             <span class="account-trigger-text" data-account-status>Logged in</span>
-            <span class="account-chevron" aria-hidden="true">▾</span>
-          </button>
-          <div class="account-dropdown" id="account-dropdown" role="menu" hidden>
-            <div class="account-meta">
-              <span class="small muted">You're logged in using</span>
-              <span class="account-phone" data-account-phone>—</span>
-            </div>
-            <div class="account-links">
-              <a href="/dashboard/" class="account-link" role="menuitem">My Listings</a>
-              <button type="button" class="account-link" data-account-logout>Logout</button>
+        <div class="header-actions">
+          <div class="account-menu" data-account-menu hidden>
+            <button class="account-trigger" type="button" aria-expanded="false" aria-controls="account-dropdown">
+              <span class="account-trigger-text" data-account-status>Logged in</span>
+              <span class="account-chevron" aria-hidden="true">▾</span>
+            </button>
+            <div class="account-dropdown" id="account-dropdown" role="menu" hidden>
+              <div class="account-meta">
+                <span class="small muted">You're logged in using</span>
+                <span class="account-phone" data-account-phone>—</span>
+              </div>
+              <div class="account-links">
+                <a href="/dashboard/" class="account-link" role="menuitem">My Listings</a>
+                <button type="button" class="account-link" data-account-logout>Logout</button>
+              </div>
             </div>
           </div>
+          <a class="btn btn-primary header-cta" href="/post">Post Property</a>
+
+          <button class="nav-toggle" type="button" aria-label="Menu" aria-controls="primary-navigation"
+            aria-expanded="false">
+            <span class="nav-toggle-icon" aria-hidden="true"></span>
+          </button>
         </div>
-        <a class="btn btn-primary header-cta" href="/post">Post Property</a>
 
-        <button class="nav-toggle"
-                type="button"
-                aria-label="Menu"
-                aria-controls="primary-navigation"
-                aria-expanded="false">
-          <span class="nav-toggle-icon" aria-hidden="true"></span>
-        </button>
       </div>
-
     </div>
-  </div>
 
-  <nav class="menu" id="primary-navigation" aria-label="Primary">
-    <div class="container nav-inner">
-      <a href="/" class="active">Home</a>
-      <a href="/listings">Listings</a>
-      <a href="/pricing">Plans</a>
-      <a href="/legal">Legal</a>
-      <a class="btn btn-primary menu-cta" href="/post">Post Property</a>
-    </div>
-  </nav>
-</header>
-  
-<main class="container">
-  <section class="hero home-hero" style="margin-bottom:30px">
+    <nav class="menu" id="primary-navigation" aria-label="Primary">
+      <div class="container nav-inner">
+        <a href="/" class="active">Home</a>
+        <a href="/listings">Listings</a>
+        <a href="/pricing">Plans</a>
+        <a href="/legal">Legal</a>
+        <a class="btn btn-primary menu-cta" href="/post">Post Property</a>
+      </div>
+    </nav>
+  </header>
+
+  <main class="container">
+    <section class="hero home-hero" style="margin-bottom:30px">
       <h1>Rental Properties in Hisar – Flats, Houses & Shops</h1>
 
-    <p class="sub">
-      Discover flats, houses and commercial shops for rent in Hisar.
-      ARH Rentals is a local property listing platform where owners
-      publish rental ads directly.  
-      Users are advised to independently verify all property details
-      before any transaction.
-    </p>
+      <p class="sub">
+        Discover flats, houses and commercial shops for rent in Hisar.
+        ARH Rentals is a local property listing platform where owners
+        publish rental ads directly.
+        Users are advised to independently verify all property details
+        before any transaction.
+      </p>
 
-    <div class="hero-actions">
-      <a href="/listings/" class="btn btn-primary">
-        Browse Rental Listings
-      </a>
-      <a href="/pricing/" class="btn">
-        Post Property for Rent
-      </a>
-    </div>
-
-    <div class="hero-trust">
-      <span>✔ Owner-posted Rental Ads</span>
-      <span>✔ Hisar-focused Property Listings</span>
-      <span>✔ No Brokerage or Deal Assurance</span>
-    </div>
-</section>
-  
-  <section class="home-intro" style="margin-bottom:32px">
-  <h2>Find & Post Rental Properties in Hisar</h2>
-
-  <p class="muted" style="max-width:720px">
-    ARH Rentals is a Hisar-focused rental listing platform.
-    Property owners can post rental ads, and tenants can browse
-    available flats, houses and shops for rent.
-    This platform provides information access only —
-    users must independently verify all property details.
-  </p>
-
-  <div class="grid-3" style="margin-top:18px">
-    <div class="card">
-      <div class="card-body">
-        <h3>For Tenants</h3>
-        <p class="muted">
-          Browse rental listings in Hisar with basic details.
-          Contact information unlock will be available through
-          OTP and paid plans.
-        </p>
-        <a href="/listings" class="btn">Browse Rentals</a>
+      <div class="hero-actions">
+        <a href="/listings/" class="btn btn-primary">
+          Browse Rental Listings
+        </a>
+        <a href="/post/" class="btn">
+          Post Property for Rent
+        </a>
       </div>
-    </div>
 
-    <div class="card">
-      <div class="card-body">
-        <h3>For Property Owners</h3>
-        <p class="muted">
-          Post your property for rent by selecting a listing plan.
-          Each plan allows publishing one rental advertisement
-          for a fixed visibility period.
-        </p>
-        <a href="/pricing" class="btn">View Listing Plans</a>
+      <div class="hero-trust">
+        <span>✔ Owner-posted Rental Ads</span>
+        <span>✔ Hisar-focused Property Listings</span>
+        <span>✔ No Brokerage or Deal Assurance</span>
       </div>
-    </div>
+    </section>
 
-    <div class="card">
-      <div class="card-body">
-        <h3>How ARH Rentals Works</h3>
-        <p class="muted">
-          ARH Rentals is a listing platform only.
-          We do not act as a broker, mediator or deal facilitator.
-        </p>
-        <a href="/legal" class="btn">Read Legal Info</a>
-      </div>
-    </div>
-  </div>
-</section>
+    <section class="home-intro" style="margin-bottom:32px">
+      <h2>Find & Post Rental Properties in Hisar</h2>
 
+      <p class="muted" style="max-width:720px">
+        ARH Rentals is a Hisar-focused rental listing platform.
+        Property owners can post rental ads, and tenants can browse
+        available flats, houses and shops for rent.
+        This platform provides information access only —
+        users must independently verify all property details.
+      </p>
 
-
-  <div class="grid">
-    <section class="card">
-      <div class="card-body">
-        <h2>Latest Rental Listings in Hisar</h2>
-<p class="muted">
-  Below are sample rental listings to show how properties will appear on ARH Rentals.
-  Live listings from property owners will start appearing as the platform opens for public use.
-</p>
-        <div class="listings" style="margin-top:12px">
-          <div class="listing" data-rent="12000">
-            <div>
-              <h3>2 BHK House</h3>
-              <p>Sector 14, Hisar</p>
-              <div class="pills">
-                <span class="pill">₹12,000 / month</span>
-                <span class="pill">Family preferred</span>
-              </div>
-            </div>
-            <button class="btn">View Contact Details</button>
-          </div>
-
-          <div class="listing" data-rent="18000">
-            <div>
-              <h3>Shop for Rent</h3>
-              <p>Main Market Area</p>
-              <div class="pills">
-                <span class="pill">₹18,000 / month</span>
-                <span class="pill">High footfall</span>
-              </div>
-            </div>
-            <button class="btn">View Contact Details</button>
+      <div class="grid-3" style="margin-top:18px">
+        <div class="card">
+          <div class="card-body">
+            <h3>For Tenants</h3>
+            <p class="muted">
+              Browse rental listings in Hisar with basic details.
+              Contact information unlock will be available through
+              OTP and paid plans.
+            </p>
+            <a href="/listings" class="btn">Browse Rentals</a>
           </div>
         </div>
 
-        <div style="margin-top:14px">
-          <a class="btn btn-primary" href="/listings">Browse All Listings</a>
-          <a class="btn" style="margin-left:8px" href="/pricing">View Plans</a>
+        <div class="card">
+          <div class="card-body">
+            <h3>For Property Owners</h3>
+            <p class="muted">
+              Post your property for rent by selecting a listing plan.
+              Each plan allows publishing one rental advertisement
+              for a fixed visibility period.
+            </p>
+            <a href="/pricing" class="btn">View Listing Plans</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-body">
+            <h3>How ARH Rentals Works</h3>
+            <p class="muted">
+              ARH Rentals is a listing platform only.
+              We do not act as a broker, mediator or deal facilitator.
+            </p>
+            <a href="/legal" class="btn">Read Legal Info</a>
+          </div>
         </div>
       </div>
     </section>
 
-    <aside class="card">
-      <div class="card-body">
-        <h2>How it works</h2>
-        <div class="hr"></div>
-        <ol class="muted" style="margin:0; padding-left:18px">
-          <li>Enter pincode (Phase 1: Hisar)</li>
-          <li>Browse listings with filters + sorting</li>
-          <li>Unlock contact details (OTP + plans coming soon)</li>
-        </ol>
 
-        <div class="hr"></div>
-        <div class="notice">
-          <strong>Note:</strong> ARH Rentals is an information-access platform. We do not act as broker/mediator.
+
+    <div class="grid">
+      <section class="card">
+        <div class="card-body">
+          <h2>Latest Rental Listings in Hisar</h2>
+          <p class="muted">
+            Below are sample rental listings to show how properties will appear on ARH Rentals.
+            Live listings from property owners will start appearing as the platform opens for public use.
+          </p>
+          <div class="listings" style="margin-top:12px">
+            <div class="listing" data-rent="12000">
+              <div>
+                <h3>2 BHK House</h3>
+                <p>Sector 14, Hisar</p>
+                <div class="pills">
+                  <span class="pill">₹12,000 / month</span>
+                  <span class="pill">Family preferred</span>
+                </div>
+              </div>
+              <button class="btn">View Contact Details</button>
+            </div>
+
+            <div class="listing" data-rent="18000">
+              <div>
+                <h3>Shop for Rent</h3>
+                <p>Main Market Area</p>
+                <div class="pills">
+                  <span class="pill">₹18,000 / month</span>
+                  <span class="pill">High footfall</span>
+                </div>
+              </div>
+              <button class="btn">View Contact Details</button>
+            </div>
+          </div>
+
+          <div style="margin-top:14px">
+            <a class="btn btn-primary" href="/listings">Browse All Listings</a>
+            <a class="btn" style="margin-left:8px" href="/pricing">View Plans</a>
+          </div>
         </div>
-      </div>
-    </aside>
-  </div>
+      </section>
+
+      <aside class="card">
+        <div class="card-body">
+          <h2>How it works</h2>
+          <div class="hr"></div>
+          <ol class="muted" style="margin:0; padding-left:18px">
+            <li>Enter pincode (Phase 1: Hisar)</li>
+            <li>Browse listings with filters + sorting</li>
+            <li>Unlock contact details (OTP + plans coming soon)</li>
+          </ol>
+
+          <div class="hr"></div>
+          <div class="notice">
+            <strong>Note:</strong> ARH Rentals is an information-access platform. We do not act as broker/mediator.
+          </div>
+        </div>
+      </aside>
+    </div>
   </main>
 
   <footer class="footer">
-  <div class="container">
-    <div>
-      © <span id="year"></span> ARH Rentals •
-      <a href="legal.html">Legal</a> •
-      <a href="pricing.html">Plans</a>
+    <div class="container">
+      <div>
+        © <span id="year"></span> ARH Rentals •
+        <a href="legal.html">Legal</a> •
+        <a href="pricing.html">Plans</a>
+      </div>
+
+      <div class="footer-disclaimer">
+        Disclaimer: ARH Rentals is an information-access platform only. We do not guarantee
+        leads, tenants, responses, or deal closure. Users must independently verify all details
+        before any transaction.
+      </div>
     </div>
-
-    <div class="footer-disclaimer">
-      Disclaimer: ARH Rentals is an information-access platform only. We do not guarantee
-      leads, tenants, responses, or deal closure. Users must independently verify all details
-      before any transaction.
-    </div>
-  </div>
-</footer>
+  </footer>
 
 
 
-<script src="/assets/app.js"></script>
+  <script src="/assets/app.js"></script>
   <div id="recaptcha-container"></div>
 </body>
+
 </html>
