Add Number of Rooms field to post form + rename BHK to Number of Rooms

--- a/listings/index.html
+++ b/listings/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Listings • ARH Rentals</title>
-   <link rel="stylesheet" href="../assets/styles.css" />
+  <link rel="stylesheet" href="../assets/styles.css" />
 </head>
 
 <body class="listings-page">
@@ -67,7 +67,7 @@
       <p>Owner-posted rental listings with smart search.</p>
     </section>
 
-        <section class="card info-strip" aria-label="How to use this page">
+    <section class="card info-strip" aria-label="How to use this page">
       <div class="card-body">
         <h2>How to Use This Page</h2>
         <p class="muted">
@@ -78,7 +78,7 @@
         <p class="small muted">Currently serving rental listings across Hisar.</p>
       </div>
     </section>
-    
+
     <div class="listings-page-layout" aria-label="Listings with filters">
       <form id="filtersForm" class="filters-shell" autocomplete="off">
         <!-- PRIMARY FILTERS (TOP BAR — ALWAYS VISIBLE) -->
@@ -261,7 +261,7 @@
                   <legend>Residential</legend>
 
                   <label class="field" for="fBhk">
-                    <span class="small">BHK</span>
+                    <span class="small">Number of Rooms</span>
                     <select class="input" id="fBhk" name="bhk">
                       <option value="">Any</option>
                       <option value="1 RK">1 RK</option>
@@ -393,12 +393,14 @@
 
                 <div class="results-meta" aria-label="Results summary">
                   <span class="small muted" id="resultsCount">Showing 3 properties</span>
-                  <span class="small muted results-context">Showing active rental listings available on this portal.</span>
+                  <span class="small muted results-context">Showing active rental listings available on this
+                    portal.</span>
                 </div>
               </div>
 
               <div id="listingWrap" class="listings listing-wrap">
-                <div class="listing" data-listing-id="listing-1" data-rent="12000" data-status="active" data-expiry="2025-12-31">
+                <div class="listing" data-listing-id="listing-1" data-rent="12000" data-status="active"
+                  data-expiry="2025-12-31">
                   <div>
                     <h3>2 BHK House</h3>
                     <p>Sector 14 • Hisar</p>
@@ -426,7 +428,8 @@
                   </div>
                 </div>
 
-                   <div class="listing" data-listing-id="listing-2" data-rent="18000" data-status="active" data-expiry="2025-12-31">
+                <div class="listing" data-listing-id="listing-2" data-rent="18000" data-status="active"
+                  data-expiry="2025-12-31">
                   <div>
                     <h3>Shop for Rent</h3>
                     <p>Main Market Area</p>
@@ -443,18 +446,19 @@
                     </div>
                   </div>
                   <button class="btn">Unlock Details</button>
-                   <div class="small muted listing-contact">
+                  <div class="small muted listing-contact">
                     Contact is shared by the owner. ARH Rentals does not mediate or confirm responses.
                   </div>
                   <div class="small muted listing-note">
                     Contact details unlock will be available in a future update.
                   </div>
-                    <div class="small muted listing-expiry">
+                  <div class="small muted listing-expiry">
                     Listings automatically become hidden after expiry if not renewed by the owner.
                   </div>
                 </div>
 
-                 <div class="listing" data-listing-id="listing-3" data-rent="6500" data-status="active" data-expiry="2025-12-31">
+                <div class="listing" data-listing-id="listing-3" data-rent="6500" data-status="active"
+                  data-expiry="2025-12-31">
                   <div>
                     <h3>1 RK</h3>
                     <p>Near Income Tax Office</p>
@@ -477,7 +481,7 @@
                   <div class="small muted listing-note">
                     Contact details unlock will be available in a future update.
                   </div>
-                   <div class="small muted listing-expiry">
+                  <div class="small muted listing-expiry">
                     Listings automatically become hidden after expiry if not renewed by the owner.
                   </div>
                 </div>
@@ -607,7 +611,7 @@
     </footer>
   </main>
 
- <script src="../assets/app.js"></script>
+  <script src="../assets/app.js"></script>
 </body>
 
 </html>
