--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
 
 
-  <script src="/assets/app.js"></script>
+  <script src="assets/app.js"></script>
   <div id="recaptcha-container"></div>
 </body>
 
