Fix: Rename dashboard.js to bypass GitHub Pages cache

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -140,7 +140,7 @@
   </main>
 
   <script src="/assets/app.js"></script>
-  <script src="/assets/dashboard.js?v=2"></script>
+  <script src="/assets/dashboard-fixed.js"></script>
 </body>
 
 </html>
