feat: Global login with backend-stored profile names
- Add profile API endpoints (GET/PUT /api/profile/me) to arh-dashboard worker
- Create D1 profiles table schema with phone/name storage
- Implement name popup modal for first-time user name capture
- Update header to display user name instead of masked phone
- Integrate profile fetching with OTP login flow
- Add name-popup.js component with validation and error handling
- Update app.js with profile API integration and header updates
- Add modal CSS styling for name popup
- Update HTML pages (index, post, listings) to include name-popup script

Backend: arh-dashboard worker now handles profile storage
Frontend: Name captured once, synced across devices via D1

--- a/listings/index.html
+++ b/listings/index.html
@@ -608,6 +608,7 @@
     </footer>
   </main>
 
+  <script src="../assets/name-popup.js?v=1"></script>
   <script src="../assets/app.js"></script>
   <script src="/assets/listings.js"></script>
 </body>
