--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
 
 
 
+  <script src="assets/name-popup.js?v=1"></script>
   <script src="assets/app.js?v=fix5"></script>
   <div id="recaptcha-container"></div>
 </body>
