fix(login): Implement global login modal and complete worker logic
- Add Login button to header (index, listings, post)
- Create login-modal.js for global OTP login flow
- Update app.js to handle button visibility and login events
- Add CSS for login button (btn-secondary)
- Merge full backend logic (listings, uploads, drafts) into dashboard-backend/worker.js
- Ensure Post Property page unlocks automatically after global login

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
               </div>
             </div>
           </div>
+
+          <!-- LOGIN BUTTON (Visible when logged out) -->
+          <button id="headerLoginBtn" type="button" class="btn btn-secondary header-login-btn"
+            style="display:none;">Login</button>
+
           <a class="btn btn-primary header-cta" href="/post">Post Property</a>
 
           <button class="nav-toggle" type="button" aria-label="Menu" aria-controls="primary-navigation"
@@ -237,6 +242,7 @@
 
 
   <script src="assets/name-popup.js?v=1"></script>
+  <script src="assets/login-modal.js?v=1"></script>
   <script src="assets/app.js?v=fix5"></script>
   <div id="recaptcha-container"></div>
 </body>
