--- a/listings/index.html
+++ b/listings/index.html
@@ -37,6 +37,10 @@
               </div>
             </div>
           </div>
+
+          <button id="headerLoginBtn" type="button" class="btn btn-secondary header-login-btn"
+            style="display:none;">Login</button>
+
           <a class="btn btn-primary header-cta" href="/post">Post Property</a>
           <button class="nav-toggle" type="button" aria-label="Menu" aria-controls="primary-navigation"
             aria-expanded="false">
@@ -609,6 +613,7 @@
   </main>
 
   <script src="../assets/name-popup.js?v=1"></script>
+  <script src="../assets/login-modal.js?v=1"></script>
   <script src="../assets/app.js"></script>
   <script src="/assets/listings.js"></script>
 </body>
