--- a/contact-us.html
+++ b/contact-us.html
@@ -67,10 +67,12 @@
             </div>
             <div class="account-links">
               <a href="/dashboard/" class="account-link" role="menuitem">My Listings</a>
+              <a href="/post/" class="account-link" role="menuitem">Post Property</a>
               <button type="button" class="account-link" data-account-logout>Logout</button>
             </div>
           </div>
         </div>
+        <button id="headerLoginBtn" type="button" class="btn btn-secondary header-login-btn">Login</button>
         <a class="btn btn-primary header-cta" href="contact-us.html">Get Quote</a>
       </div>
     </div>
@@ -132,6 +134,7 @@
 
   </div>
 
+  <script src="assets/login-modal.js?v=1"></script>
   <script src="assets/app.js"></script>
 </body>
 </html>
