--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -36,10 +36,12 @@
             </div>
             <div class="account-links">
               <a href="/dashboard/" class="account-link" role="menuitem">My Listings</a>
+              <a href="/post/" class="account-link" role="menuitem">Post Property</a>
               <button type="button" class="account-link" data-account-logout>Logout</button>
             </div>
           </div>
         </div>
+        <button id="headerLoginBtn" type="button" class="btn btn-secondary header-login-btn">Login</button>
         <a class="btn btn-primary" href="/post">Post Property</a>
       </nav>
     </div>
@@ -139,6 +141,7 @@
     </section>
   </main>
 
+  <script src="/assets/login-modal.js?v=1"></script>
   <script src="/assets/app.js"></script>
   <script src="/assets/dashboard-fixed.js"></script>
 </body>
