--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
               </div>
               <div class="account-links">
                 <a href="/dashboard/" class="account-link" role="menuitem">My Listings</a>
+                <a href="/post/" class="account-link" role="menuitem">Post Property</a>
                 <button type="button" class="account-link" data-account-logout>Logout</button>
               </div>
             </div>
           </div>
 
           <!-- LOGIN BUTTON (Visible when logged out) -->
-          <button id="headerLoginBtn" type="button" class="btn btn-secondary header-login-btn"
-            style="display:none;">Login</button>
+          <button id="headerLoginBtn" type="button" class="btn btn-secondary header-login-btn">Login</button>
 
           <a class="btn btn-primary header-cta" href="/post">Post Property</a>
 
