--- a/legal/index.html
+++ b/legal/index.html
@@ -35,10 +35,12 @@
           </div>
           <div class="account-links">
             <a href="/dashboard/" class="account-link" role="menuitem">My Listings</a>
+            <a href="/post/" class="account-link" role="menuitem">Post Property</a>
             <button type="button" class="account-link" data-account-logout>Logout</button>
           </div>
         </div>
       </div>
+      <button id="headerLoginBtn" type="button" class="btn btn-secondary header-login-btn">Login</button>
       <a class="btn btn-primary" href="/post">Post Property</a>
     </nav>
   </div>
@@ -102,6 +104,7 @@
 
 </main>
 
+  <script src="/assets/login-modal.js?v=1"></script>
 <script src="/assets/app.js"></script>
 </body>
 </html>
