--- a/listings/index.html
+++ b/listings/index.html
@@ -33,14 +33,14 @@
               </div>
               <div class="account-links">
                 <a href="/dashboard/" class="account-link" role="menuitem">My Listings</a>
+                <a href="/post/" class="account-link" role="menuitem">Post Property</a>
                 <button type="button" class="account-link" data-account-logout>Logout</button>
               </div>
             </div>
           </div>
 
-          <button id="headerLoginBtn" type="button" class="btn btn-secondary header-login-btn"
-            style="display:none;">Login</button>
-
+          <button id="headerLoginBtn" type="button" class="btn btn-secondary header-login-btn">Login</button>
+          
           <a class="btn btn-primary header-cta" href="/post">Post Property</a>
           <button class="nav-toggle" type="button" aria-label="Menu" aria-controls="primary-navigation"
             aria-expanded="false">
