--- a/property.html
+++ b/property.html
@@ -34,10 +34,12 @@
           </div>
           <div class="account-links">
             <a href="/dashboard/" class="account-link" role="menuitem">My Listings</a>
+            <a href="/post/" class="account-link" role="menuitem">Post Property</a>
             <button type="button" class="account-link" data-account-logout>Logout</button>
           </div>
         </div>
       </div>
+      <button id="headerLoginBtn" type="button" class="btn btn-secondary header-login-btn">Login</button>
       <a class="btn btn-primary" href="post.html">Post Property</a>
     </nav>
   </div>
@@ -107,6 +109,7 @@
 
 </main>
 
+  <script src="assets/login-modal.js?v=1"></script>
 <script src="assets/app.js"></script>
 </body>
 </html>
